<resources>
    <string name="app_name">Quiz App</string>
    <string name="enterName">Enter your name</string>
    <string name="next">Continue</string>
    <string name="checkname">Write your name in the box to continue</string>
    <string name="question1">What\'s the sun\'s surface temperature?</string>
    <string name="q1a1">1 000°C</string>
    <string name="q1a2">10 000°C</string>
    <string name="q1a3">5 000°C</string>
    <string name="question2">What\'s the 3rd planet from the sun?</string>
    <string name="question3">Select 2 planets from our solar system</string>
    <string name="q3a1">Mars</string>
    <string name="q3a2">Moon</string>
    <string name="q3a3">Pluto</string>
    <string name="q3a4">Uranus</string>
    <string name="question4">What\'s the most abundant element in the Earth\'s crust?</string>
    <string name="q4a1">Aluminium</string>
    <string name="q4a2">Gold</string>
    <string name="q4a3">Oxygen</string>
    <string name="question5">Select the 2 biggest planets in our solar system</string>
    <string name="q5a1">Mars</string>
    <string name="q5a2">Saturn</string>
    <string name="q5a3">Uranus</string>
    <string name="q5a4">Jupiter</string>
    <string name="question6">How much of our entire solar system\'s mass in contained in the Sun?</string>
    <string name="q6a1">43.89%</string>
    <string name="q6a2">65.9%</string>
    <string name="q6a3">99.9%</string>
    <string name="congrats">Congratulations!</string>
    <string name="lastPage">Finish</string>
    <string name="submit">Submit answer</string>
    <string name="hintq2">Write your answer</string>
    <string name="nextPage">Next question</string>
    <string name="selectone">Please select an answer</string>
    <string name="selecttwo">Please pick two answers</string>
    <string name="share">Share</string>
    <string name="exitapp">Exit</string>
    <string name="writeanswer">Please write your answer in the box</string>
    <string name="title_activity_question5">question5</string>
</resources>
